Revision history for {{$dist->name}}

{{$NEXT}}

0.94      2014-09-11 13:42:50 -0400

0.93      2014-09-09 16:36:02 -0400
  - update my dists to latest

0.92      2014-09-09 16:33:53 -0400
  - update my dists to latest

0.91      2014-08-05 13:24:38 -0400
  - update my dists to latest

0.90      2014-08-05 08:21:29 -0400
  - update my dists to latest

0.89      2014-08-05 07:24:28 -0400
  - update my dists to latest

0.88      2014-08-04 17:03:11 -0400
  - add AnyEvent::FTP
  - update my dists to latest

0.87      2014-07-29 05:55:47 -0400
  - rm Dist::Zilla::Plugin::TwitterBootstrap
  - rm WebService::TwitterBootstrap::Download::Custom

0.86      2014-06-19 16:13:32 -0400
  - update my dists to latest

0.85      2014-06-13 10:15:04 -0400
  - update my dists to latest

0.84      2014-06-11 15:41:44 -0400
  - update my dists to latest

0.83      2014-06-11 08:33:59 -0400
  - add Alien::bz2::Installer
  - update my dists to latest

0.82      2014-06-10 22:22:39 -0400
  - update my dists to latest

0.81      2014-06-10 16:30:09 -0400
  - updated Archive::Ar::Libarchive to latest
    missed it in last release

0.80      2014-06-10 16:28:22 -0400
  - update my dists to latest
  - rm Alien::Libarchive::MSWin32
  - add Alien::Libarchive::Installer

0.79      2014-05-31 06:41:45 -0400
  - update my dists to latest

0.78      2014-05-29 07:48:22 -0400
  - update my dists to latest
  - added App::spaceless

0.77      2014-05-27 07:59:36 -0400
  - add Dist::Zilla::Plugin::Meta::Dynamic::Config
  - add Dist::ZIlla::Plugin::PPPort
  - add Monkey::Patch
  - add Pod::Abstract
  - add Test::CPAN::Changes
  - add Test::Vars

0.76      2014-05-24 08:26:25 -0400
  - migrate to Module::Build
  - update my dists to latest

0.75      2014-05-15 11:53:20 -0400
  - don't install Archive::Libarchive::FFI on MSWin32
  - added Win32::Shortcut::Readlink
  - update my dists to latest

0.74      2014-04-17 07:53:18 -0400
  - update my dists to latest

0.73      2014-04-07 13:25:05 -0400