@@ -15,6 +15,8 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
+Acme::Alien::DontPanic                         = 0.006
+Acme::Ford::Prefect                            = 0.006
 Alien::Base                                    = 0.005
 Alien::bz2                                     = 0.12
 Alien::bz2::Installer                          = 0.03
